--- a/A10WordsApp2/app/build.gradle
+++ b/A10WordsApp2/app/build.gradle
@@ -21,7 +21,6 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
 
     defaultConfig {
         applicationId "com.example.wordsapp"
@@ -51,6 +50,7 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    namespace 'com.example.wordsapp'
 }
 
 dependencies {
@@ -59,4 +59,6 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "com.google.android.material:material:$material_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
